--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Landing Page</title>
 </head>
 <body>
-    <div class="section 1">
+    <div class="section1">
         <div class="header">
             <p>Header Logo</p>
             <div class="links">
@@ -19,10 +19,38 @@
             <h1>This website is awesome</h1>
             <p>This website has some subtext that goes here under the main title. Its a smaller font and the color is a lower contrast</p>
             <button>Sign up</button>
+            <div class="img-container">
+                <p>This is a placeholder for an image</p>
+            </div>
         </div>
     </div>
-    <div class="section 2">
-
+    <div class="section2">
+        <h2>Some random information</h2>
+        <div class="box1">
+            <p>this is some subtext under a illustration or image</p>
+        </div>
+        <div class="box2">
+            <p>this is some subtext under a illustration or image</p>
+        </div>
+        <div class="box3">
+            <p>this is some subtext under a illustration or image</p>
+        </div>
+        <div class="box4">
+            <p>this is some subtext under a illustration or image</p>
+        </div>
+        
+    </div>
+    <div class="section3">
+        <p>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
+        <p>-Thor, God of Thunder</p>
+    </div>
+    <div class="section4">
+        <p>Call to action! It's time!</p>
+        <p>Sign up for our product by clicking that button right over there</p>
+        <button>Sign up</button>
+    </div>
+    <div class="footer">
+        <p>Copyright © The Odin Project 2021</p>
     </div>
 </body>
 </html>
