Add new classes

--- a/index.html
+++ b/index.html
@@ -4,21 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Landing Page</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <div class="section1">
         <div class="header">
-            <p>Header Logo</p>
+            <p class="logo">Header Logo</p>
             <div class="links">
                 <a href="#">header link 1</a>
                 <a href="#">header link 2</a>
                 <a href="#">header link 3</a>
             </div>
         </div>
-        <div class="content">
-            <h1>This website is awesome</h1>
-            <p>This website has some subtext that goes here under the main title. Its a smaller font and the color is a lower contrast</p>
-            <button>Sign up</button>
+        <div class="testing">
+            <div class="content">
+                <h1>This website is awesome</h1>
+                <p>This website has some subtext that goes here under the main title. Its a smaller font and the color is a lower contrast</p>
+                <button id="button1">Sign up</button>
+            </div>
+            
             <div class="img-container">
                 <p>This is a placeholder for an image</p>
             </div>
@@ -26,31 +30,43 @@
     </div>
     <div class="section2">
         <h2>Some random information</h2>
-        <div class="box1">
-            <p>this is some subtext under a illustration or image</p>
-        </div>
-        <div class="box2">
-            <p>this is some subtext under a illustration or image</p>
-        </div>
-        <div class="box3">
-            <p>this is some subtext under a illustration or image</p>
-        </div>
-        <div class="box4">
-            <p>this is some subtext under a illustration or image</p>
-        </div>
+        <div class="boxes">
+            <div class="box1">
+            </div>
+            <div class="box2">
+            </div>
+            <div class="box3">
+            </div>
+            <div class="box4">
+            </div>
         
+        </div>
+        <div class="boxinfo">
+            <p>this is some subtext under a illustration or image</p>
+            <p>this is some subtext under a illustration or image</p>
+            <p>this is some subtext under a illustration or image</p>
+            <p>this is some subtext under a illustration or image</p>
+        </div>
     </div>
     <div class="section3">
-        <p>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
+        <p class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
+        <div class="quoter">
         <p>-Thor, God of Thunder</p>
+        </div>
     </div>
     <div class="section4">
-        <p>Call to action! It's time!</p>
-        <p>Sign up for our product by clicking that button right over there</p>
-        <button>Sign up</button>
+        <div class="container">
+            <div class="sec4heading">
+                <p>Call to action! It's time!</p>
+            </div>
+            <div class="info">
+                <p>Sign up for our product by clicking that button right over there</p>
+                <butto class="signup">Sign up</button>
+            </div>
+        </div>
     </div>
     <div class="footer">
-        <p>Copyright © The Odin Project 2021</p>
+        <p class="foot">Copyright © The Odin Project 2021</p>
     </div>
 </body>
 </html>
